Fix z-indexes

--- a/dash-if-reference-player/src/app/components/footer/footer.component.css
+++ b/dash-if-reference-player/src/app/components/footer/footer.component.css
@@ -8,7 +8,7 @@
   width: 100%;
   position: fixed;
   bottom: 0;
-  z-index: 99999;
+  z-index: 900;
 }
 
 .footer-spacer {
