--- a/dash-if-reference-player/src/app/components/player/player.component.css
+++ b/dash-if-reference-player/src/app/components/player/player.component.css
@@ -6,5 +6,5 @@ video {
 .video-controller {
   position: relative;
   top: -6px;
-  z-index: 999;
+  z-index: 800;
 }
